# aoc-2025

C++/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  new_day.py
C++/aoc/: CMakeLists.txt
C++/aoc/include/: day.hpp
C++/aoc/include/days/: day00.hpp  day01.hpp  day02.hpp  day03.hpp  day04.hpp
C++/aoc/include/utility/: math_helpers.hpp  parsing.hpp  print_helpers.hpp  range.hpp
C++/aoc/include/utility/grid/: direction.hpp  grid_view.hpp  point.hpp  vector_grid_view.hpp
C++/aoc/src/: day.cpp  main.cpp
C++/aoc/src/days/: day00.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp
C++/aoc/src/utility/: math_helpers.cpp
C++/aoc/src/utility/grid/: direction.cpp  grid_view.cpp  point.cpp
CSharp/: .gitignore
CSharp/AdventOfCode/: AdventOfCode.csproj  Day01.cs  Day02.cs  Day09.cs  Day10.cs  Day11.cs  Day12.cs  Day_26.cs  Utilities.cs
Python/: day08.py  day10.py
Rust/: .gitignore
Rust/src/: lib.rs
Zig/: .gitignore  build.zig  build.zig.zon
Zig/src/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  util.zig
Zig/template/: template.zig
